# kaniscope-action

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  action.yml
.github/workflows/: post-test.yml  selftest.yml
examples/: buggy.js
src/: main.rs
