[package]
name = "kaniscope-action"
version = "0.1.0"
edition = "2021"
description = "GitHub Action entrypoint for Kaniscope AI code review — reviews a PR diff via the pr-review-core engine and posts comments."
license = "MIT OR Apache-2.0"

[[bin]]
name = "kaniscope-action"
path = "src/main.rs"

[dependencies]
# The published review engine — https://crates.io/crates/pr-review-core
pr-review-core = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
strip = true
